# dionysus

./: LICENSE  README.md  config.yaml.example  main.py  pyproject.toml  start_api.py
app/: main.py
app/internal/simpcity/: simpcity.py
app/router/: threads.py
config/: config.py
cookies/: cookies.py
crawler/download/: bunkr.py
crawler/simpcity/: simpcity.py
db/: postgre.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  ThreadDetail.css  ThreadDetail.tsx  index.css  main.tsx
frontend/src/pages/: ThreadDetail.tsx  ThreadList.tsx
