[project]
name = "dionysus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "bs4>=0.0.2",
    "drissionpage>=4.1.0.18",
    "fastapi[standard]>=0.116.0",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "selenium>=4.34.0",
]
